# clt

./: .gitignore  .noindex  .nosync  .patterns  .shellcheckrc  README.md  action.yml  clt  debug_block.mjs  debug_keys.js  test_block_regex.js  test_block_resolution.js  test_file_map.mjs  test_parameters.js  test_race_condition.js  test_real_file.js  test_validation.js  test_wasm.js
.clt/: patterns
.github/workflows/: clt-template.yml
cmp/: Cargo.toml  block.recb  in.rec  test.rec
cmp/src/: lib.rs  main.rs
lib/: argument.sh  container.sh  rec.sh
mcp/: Cargo.toml  README.md  setup.recb  test_mcp.sh  test_structured.sh
mcp/.cargo/: config.toml
mcp/.clt/: patterns
mcp/src/: main.rs  mcp_protocol.rs  pattern_refiner.rs  structured_test.rs  test_runner.rs
mcp/src/server/: config.rs  handlers.rs  help.rs  mod.rs  protocol.rs  tools.rs  utils.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/tests/: compile.rs
parser/tests/data/: .gitignore
parser/tests/data/blocks/: block1.recb  block2.recb  test.rec  test.recc
rec/: Cargo.toml  test.sh
rec/src/: main.rs
src/: create-ci.sh  help.sh  record.sh  refine.sh  test.sh
ui/: .env.example  .gitignore  API.md  DOCKER_IMAGE.md  INSTALL.md  README.md  auth.js  dev.js  examples.rec  ff  gitRoutes.js  helpers.js  index.html  interactiveRoutes.js  new_server.js  package-lock.json  package.json  repositoryManager.js  routes.js  server.js  tailwind.config.js  test-interactive.sh  test-output-generated.rec  testAndGitRoutes.js  testProcessor.js  testRoutes.js  tests  tokenManager.js  vite.config.ts  wasmNodeWrapper.js
ui/.clt/: patterns
ui/config/: auth.js
ui/doc/: API.md  ASK_AI.md  COMPONENTS.md  DEVELOPMENT.md  README.md  THEMING.md  THEMING_QUICK_REF.md  URL_PARAMETERS.md
ui/public/auth/: login.html
ui/src/: App.svelte  app.css  config.js  create-pr-endpoint.js  main.ts  vite-env.d.ts
ui/src/components/: BranchSelector.svelte  CodeMirrorInput.svelte  DiffHighlighter.svelte  Editor.svelte  EditorLogic.js  FileEditorModal.svelte  FileExplorer.svelte  FuzzySearch.svelte  GitChangesPanel.svelte  Header.svelte  InteractiveSession.svelte  OutputCodeMirror.svelte  PullRequestModal.svelte  SimpleCodeMirror.svelte  Step.svelte  StepLogic.js
ui/src/constants/: fileFilters.ts
ui/src/lib/: frontendTokenManager.ts
ui/src/stores/: authStore.ts  branchStore.ts  filesStore.ts  gitStatusStore.ts  githubStore.ts  repoSyncStore.ts
ui/tests/: basic.cmp  basic.rec
wasm/: Cargo.toml  README.md
wasm-diff/: Cargo.toml
wasm-diff/src/: lib.rs
wasm/src/: lib.rs
