[package]
name = "rec"
version = "0.1.0"
edition = "2021"
authors = ["Manticore Software Ltd <contact@manticoresearch.com>"]
license = "Apache-2.0"

[dependencies]
parser = { path = "../parser" }
anyhow = "1.0.71"
paw = "1.0.0"
pty-process = { git = "https://github.com/doy/pty-process", rev = "74c223df6dd285f17108c8f442d71fd5ddb9561e", version = "0.4.0", features = ["async"] }
structopt = { version = "0.3.26", features = ["paw", "wrap_help"] }
textmode = { version = "0.4.0", features = ["async"] }
tokio = { version = "1.29.1", features = ["full"] }
regex = "^1.8.4"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
